<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <TextView
        android:id="@+id/celebrity_detail$text_view_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/test_medium"
        android:textColor="@color/textPrimaryColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/celebrity_detail$image_view_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/celebrity_detail$image_view_cover"
        android:layout_width="90dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintDimensionRatio="W,10:7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/celebrity_detail$text_view_info" />

    <TextView
        android:id="@+id/celebrity_detail$text_view_intro_label"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/celebrity_intro"
        android:textColor="@color/textSecondaryColor"
        app:layout_constraintTop_toBottomOf="@id/celebrity_detail$image_view_cover" />

    <TextView
        android:id="@+id/celebrity_detail$text_view_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/test_long"
        android:textColor="@color/textPrimaryColor"
        app:layout_constraintTop_toBottomOf="@id/celebrity_detail$text_view_intro_label" />

</android.support.constraint.ConstraintLayout>