<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp">

    <LinearLayout
        android:id="@+id/subjectdetail_content$linear_layout_stars"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/subjectdetail_content$text_view_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="@id/subjectdetail_content$linear_layout_stars"
        app:layout_constraintLeft_toRightOf="@id/subjectdetail_content$linear_layout_stars"
        app:layout_constraintTop_toTopOf="@id/subjectdetail_content$linear_layout_stars"/>

    <TextView
        android:id="@+id/subjectdetail_content$text_view_rating_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:textColor="#aaa"
        android:text="@string/rating_count_placeholder"
        app:layout_constraintBottom_toBottomOf="@id/subjectdetail_content$text_view_rating"
        app:layout_constraintLeft_toRightOf="@id/subjectdetail_content$text_view_rating"
        app:layout_constraintTop_toTopOf="@id/subjectdetail_content$text_view_rating" />

    <TextView
        android:id="@+id/subjectdetail_content$text_view_no_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_rating"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/subjectdetail_content$text_view_meta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="#494949"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectdetail_content$linear_layout_stars" />

    <TextView
        android:id="@+id/subjectdetail_content$text_view_summary_label"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/summary_placeholder"
        android:textColor="#aaa"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectdetail_content$text_view_meta" />

    <TextView
        android:id="@+id/subjectdetail_content$text_view_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColor="#494949"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectdetail_content$text_view_summary_label" />

    <TextView
        android:id="@+id/subjectdetail_content$text_view_no_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/no_summary"
        android:textColor="#494949"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subjectdetail_content$text_view_summary_label" />

</android.support.constraint.ConstraintLayout>