<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/nav_bg"
    android:padding="16dp">

    <TextView
        android:id="@+id/drawer$text_view_night_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/night_mode"
        android:textColor="@color/textPrimaryColorInverted"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/drawer$switch_night_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="@id/drawer$text_view_night_mode"
        app:layout_constraintLeft_toRightOf="@id/drawer$text_view_night_mode"
        app:layout_constraintTop_toTopOf="@id/drawer$text_view_night_mode" />

    <TextView
        android:id="@+id/drawer$text_view_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/author_email"
        android:textColor="@color/textPrimaryColorInverted"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/drawer$text_view_night_mode" />

    <TextView
        android:id="@+id/drawer$text_view_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/author_nickname"
        android:textColor="@color/textPrimaryColorInverted"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/drawer$text_view_email" />

    <ImageView
        android:id="@+id/drawer$image_view_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/image"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/drawer$text_view_nickname" />

    <!--<android.support.constraint.ConstraintLayout
    android:id="@+id/drawer$layout_header"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="@color/colorAccent">

    </android.support.constraint.ConstraintLayout>-->

    <!--<android.support.constraint.Guideline
        android:id="@+id/drawer$guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>

    <TextView
        android:id="@+id/drawer$text_view_night_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/night_mode"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/drawer$switch_night_mode"
        app:layout_constraintTop_toBottomOf="@id/drawer$layout_header" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/drawer$switch_night_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/drawer$text_view_night_mode"
        app:layout_constraintLeft_toRightOf="@id/drawer$text_view_night_mode"
        app:layout_constraintRight_toRightOf="@id/drawer$guideline"
        app:layout_constraintTop_toTopOf="@id/drawer$text_view_night_mode" />-->

</android.support.constraint.ConstraintLayout>