<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/subjects_item$card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/subjects_item$image_view_cover"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/subjects_item$text_view_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/label"
            android:textColor="@color/textPrimaryColor"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@id/subjects_item$image_view_cover"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/subjects_item$text_view_no_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/no_rating"
            android:textColor="@color/textSecondaryColor"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="@id/subjects_item$text_view_title"
            app:layout_constraintTop_toBottomOf="@id/subjects_item$text_view_title" />

        <LinearLayout
            android:id="@+id/subjects_item$layout_rating_stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@id/subjects_item$text_view_title"
            app:layout_constraintTop_toBottomOf="@id/subjects_item$text_view_title" />

        <TextView
            android:id="@+id/subjects_item$text_view_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:textColor="@color/textSecondaryColor"
            app:layout_constraintBottom_toBottomOf="@id/subjects_item$layout_rating_stars"
            app:layout_constraintLeft_toRightOf="@id/subjects_item$layout_rating_stars"
            app:layout_constraintTop_toTopOf="@id/subjects_item$layout_rating_stars" />

        <TextView
            android:id="@+id/subjects_item$text_view_spare1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@color/textSecondaryColor"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/subjects_item$layout_rating_stars"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subjects_item$layout_rating_stars" />

        <TextView
            android:id="@+id/subjects_item$text_view_spare2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/textSecondaryColor"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="@id/subjects_item$text_view_spare1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subjects_item$text_view_spare1" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>